Fixed line chart overflowing issue & some padding adjustment for header and home below 480px width

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -46,6 +46,6 @@
 
 @media (max-width: 480px) {
   .header {
-    padding: 0 4px;
+    padding: 0 12px;
   }
 }
